src/test/ui/on-unimplemented/no-debug.stderr
error[E0277]: `Foo` doesn't implement `std::fmt::Debug`
  --> $DIR/no-debug.rs:10:27
   |
LL |     println!("{:?} {:?}", Foo, Bar);
   |                           ^^^ `Foo` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `Foo`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required by `std::fmt::Debug::fmt`

error[E0277]: `no_debug::Bar` doesn't implement `std::fmt::Debug`
  --> $DIR/no-debug.rs:10:32
   |
LL |     println!("{:?} {:?}", Foo, Bar);
   |                                ^^^ `no_debug::Bar` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `no_debug::Bar`
   = note: required by `std::fmt::Debug::fmt`

error[E0277]: `Foo` doesn't implement `std::fmt::Display`
  --> $DIR/no-debug.rs:11:23
   |
LL |     println!("{} {}", Foo, Bar);
   |                       ^^^ `Foo` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Foo`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required by `std::fmt::Display::fmt`

error[E0277]: `no_debug::Bar` doesn't implement `std::fmt::Display`
  --> $DIR/no-debug.rs:11:28
   |
LL |     println!("{} {}", Foo, Bar);
   |                            ^^^ `no_debug::Bar` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `no_debug::Bar`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required by `std::fmt::Display::fmt`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
